--- a/JustVP/MainWindow.xaml
+++ b/JustVP/MainWindow.xaml
@@ -12,7 +12,7 @@
         MouseDown="WindowMouseDown"
         SizeToContent="Width"
         ShowInTaskbar="True"
-        Title="JustVP" Height="450" Width="800" MinHeight="300" MinWidth="300">
+        Title="JustVP" Height="550" Width="800" MinHeight="300" MinWidth="300">
 
     <!--#region ресурсы-->
     <Window.Resources>
@@ -48,10 +48,10 @@
     <Grid Background="#FF131313">
         <MediaElement x:Name="videoelement" UnloadedBehavior="Manual" Volume="0.1" ></MediaElement>
         <Button x:Name="OFButton" Content="Открыть файл" Click="OpenFile" Margin="0,0,0,98" HorizontalAlignment="Center" Width="150" Background="#FF444444" Foreground="White" BorderBrush="#FF373737" Height="37" VerticalAlignment="Bottom"/>
-        <Button Content="Закрыть" Background="#7F484848" Foreground="#BFFFFFFF" BorderBrush="#BF707070" Click="Button_Click" Height="30" VerticalAlignment="Top" HorizontalAlignment="Right" Width="105"/>
+        <Button Content="Закрыть" Background="#7F484848" Foreground="#BFFFFFFF" BorderBrush="{x:Null}" Click="Button_Click" Height="30" VerticalAlignment="Top" HorizontalAlignment="Right" Width="97"/>
         <Grid Background="#BF131313" Panel.ZIndex="5" Height="56" VerticalAlignment="Bottom">
-            <TextBlock x:Name="videotextpanel" Margin="10,14,0,0" Foreground="White" Text="1488" FontFamily="Bahnschrift" FontSize="16" HorizontalAlignment="Left" Width="147"></TextBlock>
-            <Slider x:Name="videoslider">
+            <TextBlock x:Name="videotextpanel" Margin="10,14,0,0" Foreground="White" Text="1488" FontFamily="Bahnschrift" FontSize="16" HorizontalAlignment="Left" Width="390"></TextBlock>
+            <Slider x:Name="videoslider" Margin="0,0,0,28" ValueChanged="videoslider_ValueChanged" MouseLeftButtonUp="MouseUps" MouseEnter="MouseDowns" >
                 <Slider.Foreground>
                     <SolidColorBrush Color="#BFE5E5E5" Opacity="0.75"/>
                 </Slider.Foreground>
@@ -61,6 +61,7 @@
                     <SolidColorBrush Color="#BFE5E5E5" Opacity="0.75"/>
                 </Slider.Foreground>
             </Slider>
+            <TextBlock Visibility="Hidden" x:Name="debugtext" Margin="437,14,0,0" Foreground="White" Text="1488" FontFamily="Bahnschrift" FontSize="16" HorizontalAlignment="Left" Width="390"/>
         </Grid>
     </Grid>
 </Window>
