--- a/JustVP/MainWindow.xaml
+++ b/JustVP/MainWindow.xaml
@@ -46,8 +46,58 @@
             </Setter>
             <Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"/>
         </Style>
+        <Storyboard x:Key="HideTimelinePanel">
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="grid" Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.Y)">
+                <EasingDoubleKeyFrame KeyTime="00:00:00" Value="1.882">
+                    <EasingDoubleKeyFrame.EasingFunction>
+                        <BackEase EasingMode="EaseIn"/>
+                    </EasingDoubleKeyFrame.EasingFunction>
+                </EasingDoubleKeyFrame>
+                <EasingDoubleKeyFrame KeyTime="00:00:01" Value="73.389">
+                    <EasingDoubleKeyFrame.EasingFunction>
+                        <BackEase EasingMode="EaseInOut"/>
+                    </EasingDoubleKeyFrame.EasingFunction>
+                </EasingDoubleKeyFrame>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="grid" Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)">
+                <EasingDoubleKeyFrame KeyTime="00:00:00" Value="0"/>
+                <EasingDoubleKeyFrame KeyTime="00:00:01" Value="1.882">
+                    <EasingDoubleKeyFrame.EasingFunction>
+                        <BackEase EasingMode="EaseInOut"/>
+                    </EasingDoubleKeyFrame.EasingFunction>
+                </EasingDoubleKeyFrame>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="button" Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleX)">
+                <EasingDoubleKeyFrame KeyTime="00:00:00" Value="2.801"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="button" Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(ScaleTransform.ScaleY)">
+                <EasingDoubleKeyFrame KeyTime="00:00:00" Value="1.733"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="button" Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.X)">
+                <EasingDoubleKeyFrame KeyTime="00:00:00" Value="33.872"/>
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Storyboard.TargetName="button" Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[3].(TranslateTransform.Y)">
+                <EasingDoubleKeyFrame KeyTime="00:00:00" Value="6.586"/>
+            </DoubleAnimationUsingKeyFrames>
+        </Storyboard>
+
     </Window.Resources>
     <!--#endregion-->
+
+    <Window.Triggers>
+
+
+
+        <EventTrigger SourceName="button" RoutedEvent="Button.Click" >
+            <BeginStoryboard Storyboard="{StaticResource HideTimelinePanel}"/>
+
+
+        </EventTrigger>
+
+    </Window.Triggers>
+
+
+
 
     <Grid Background="#FF131313">
         <MediaElement
@@ -77,15 +127,21 @@
             Height="30" 
             VerticalAlignment="Top" 
             HorizontalAlignment="Right"
-            Width="97"/>
-        <Grid 
+            Width="97" Margin="0,10,10,0"/>
+        <Grid x:Name="grid" 
             Background="#BF131313" 
-            Panel.ZIndex="5" 
-            Height="56" 
-            VerticalAlignment="Bottom">
+            Panel.ZIndex="5" RenderTransformOrigin="0.5,0.5" Margin="1,0,-1,3" Height="56" VerticalAlignment="Bottom">
+            <Grid.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Grid.RenderTransform>
             <TextBlock 
                 x:Name="videotextpanel" 
-                Margin="10,14,0,0" 
+                Margin="10,21,0,-7" 
                 Foreground="White" 
                 Text="1488" 
                 FontFamily="Bahnschrift" 
@@ -129,5 +185,15 @@
                 HorizontalAlignment="Left" 
                 Width="231"/>
         </Grid>
+        <Button x:Name="button" Content="Button" Visibility="Hidden" HorizontalAlignment="Left" Margin="106,367,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+            <Button.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Button.RenderTransform>
+        </Button>
     </Grid>
 </Window>
